# Evalforge

./: .env.example  .gitignore  README.md  ROADMAP.md
deepeval-svc/: README.md  pyproject.toml
deepeval-svc/app/: cluster.py  main.py  optimize.py  score.py  types.py
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/runs/: route.ts
web/app/api/runs/[id]/: route.ts
web/app/api/runs/[id]/reports/[round]/: route.ts
web/app/runs/: page.tsx
web/app/runs/[id]/: page.tsx
web/app/runs/[id]/reports/: page.tsx
web/app/runs/[id]/reports/[round]/: page.tsx
web/app/runs/new/: page.tsx
web/app/settings/: page.tsx
web/components/ui/: button.tsx  card.tsx  input.tsx  score-chip.tsx  textarea.tsx
web/lib/: report.ts  run-store.ts  utils.ts
web/lib/types/: eval.ts
web/mastra/: index.ts
web/mastra/agents/: cluster-summarizer.ts  judge.ts  patch-proposer.ts
web/mastra/tools/: call-deepeval.ts  call-py-services.ts
web/mastra/workflows/: eval-run.ts
