[project]
name = "evalforge-deepeval-svc"
version = "0.1.0"
description = "DeepEval scoring sidecar for EvalForge — wraps GEval rubric judge as an HTTP service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "deepeval>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # week 2 — failure clustering
    "openai>=1.50.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "hdbscan>=0.8.40",
    # week 3 — DSPy auto-fix optimizer
    "dspy-ai>=2.5.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.0", "pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
